# aion-terminal

./: .gitignore  Aion_PRD_v1.0.docx  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: git.rs  mod.rs  pty.rs  settings.rs  tokens.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/git/: mod.rs  porcelain.rs  watcher.rs
src-tauri/src/pty/: mod.rs  scraper.rs  session.rs
src/components/dashboard/: AgentBreakdown.tsx  BudgetGauge.tsx  CostTimeline.tsx  UsageDashboard.tsx
src/components/git/: BranchSelector.tsx  CommitForm.tsx  DiffViewer.tsx  FileTree.tsx  GitPanel.tsx  LogGraph.tsx  StashPanel.tsx
src/components/settings/: BudgetConfig.tsx  SettingsModal.tsx  ShellConfig.tsx
src/components/sidebar/: NewSessionButton.tsx  SessionSidebar.tsx  SessionTab.tsx
src/components/terminal/: FitAddon.ts  TerminalPane.tsx  TerminalToolbar.tsx
src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Tooltip.tsx
src/hooks/: useGit.ts  usePty.ts  useSettings.ts  useTokenUsage.ts
src/lib/: constants.ts  ipc.ts  types.ts
src/stores/: gitStore.ts  sessionStore.ts  settingsStore.ts
src/styles/: bauhaus.css  globals.css
src/types/: xterm-addon-webgl.d.ts
