[package]
name = "aion"
version = "0.1.0"
description = "Aion terminal orchestrator"
authors = ["Aion Team"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "aion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
git2 = "0.19"
log = "0.4"
notify = "6.1"
once_cell = "1.20"
portable-pty = "0.8"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
